added promotion section

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                                 <div class="slider-content">
                                     <div class="cont-center">
                                         <div class="slider-cont">
-                                            <h2>40% off</h2>
+                                            <h2>new arrival</h2>
                                             <a href="#">
                                                 <h1>Lorem ipsum dolor sit amet.</h1>
                                             </a>
@@ -260,7 +260,7 @@
                                 <div class="slider-content">
                                     <div class="cont-center">
                                         <div class="slider-cont">
-                                            <h2>50% off</h2>
+                                            <h2>best seller</h2>
                                             <a href="#">
                                                 <h1>Lorem ipsum dolor sit amet.</h1>
                                             </a>
@@ -275,6 +275,66 @@
             </div>
         </section>
         <!-- slider area end -->
+
+        <!-- promotions area start -->
+        <section class="promotions-section section-padding">
+            <div class="container">
+                <div class="promotion-items">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="single-promotion-item">
+                                <div class="promo-thumb">
+                                    <img src="assets/template-2/images/slider-2.jpg" alt="">
+                                </div>
+                                <div class="promo-cont">
+                                    <h3>product title</h3>
+                                    <p>
+                                        i'm on sale <br><span>up to 60% off</span>
+                                    </p>
+                                    <div class="shop-link">
+                                        <a class="btn-hover slider-btn-style animated" href="shop-grid-view-sidebar.html">shop now</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="single-promotion-item">
+                                <div class="promo-thumb">
+                                    <img src="assets/template-2/images/slider-5.jpg" alt="">
+                                </div>
+                                <div class="promo-cont">
+                                    <h3>product title</h3>
+                                    <p>
+                                        i'm on sale <br><span>up to 40% off</span>
+                                    </p>
+                                    <div class="shop-link">
+                                        <a class="btn-hover slider-btn-style animated" href="shop-grid-view-sidebar.html">shop now</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="single-promotion-item">
+                                <div class="promo-thumb">
+                                    <img src="assets/template-2/images/slider-6.jpg" alt="">
+                                </div>
+                                <div class="promo-cont">
+                                    <h3>product title</h3>
+                                    <p>
+                                        i'm on sale <br><span>up to 70% off</span>
+                                    </p>
+                                    <div class="shop-link">
+                                        <a class="btn-hover slider-btn-style animated" href="shop-grid-view-sidebar.html">shop now</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- promotions area end -->
+
 
 
 
