--- a/customer-dashboard.html
+++ b/customer-dashboard.html
@@ -311,6 +311,38 @@
                             </div>
                         </div>
                     </div>
+                    <div class="dashboard-content-area">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <div class="customer-dashboard-navigation">
+                                    <ul class="nav">
+                                        <li>
+                                            <a class="active" data-toggle="tab" href="#profile"><i class="fa fa-user"></i>My Profile</a>
+                                        </li>
+                                        <li>
+                                            <a data-toggle="tab" href="#wishlist"><i class="fa fa-heart"></i>My Wish List</a>
+                                        </li>
+                                        <li>
+                                            <a data-toggle="tab" href="#order_list"><i class="fa fa-shopping-cart"></i>My Order List</a>
+                                        </li>
+                                        <li>
+                                            <a data-toggle="tab" href="#logout"><i class="fa fa-lock"></i>Logout</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-md-9">
+                                <div class="navigation-content-area">
+                                    <div class="tab-content">
+                                        <div class="tab-pane fade show active" id="profile">1...</div>
+                                        <div class="tab-pane fade" id="wishlist">2...</div>
+                                        <div class="tab-pane fade" id="order_list">3...</div>
+                                        <div class="tab-pane fade" id="logout">4...</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <!-- user dashboard area end -->
