--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                         <div class="main-menu">
                             <nav>
                                 <ul>
-                                    <li><a href="home.com">Home</a>
+                                    <li><a href="index.html">Home</a>
                                     </li>
                                     <li><a href="aboutus.com">About Us</a>
                                     </li>
-                                    <li><a href="shop">Shop</a>
+                                    <li><a href="shop.html">Shop</a>
                                     </li>
                                     <li><a href="pages.com">Pages</a>
                                         <ul class="dropdown">
@@ -1838,9 +1838,9 @@
         </div>
         <div id="menu" class="text-left">
             <ul>
-                <li><a href="#">home</a></li>
+                <li><a href="index.html">home</a></li>
                 <li><a href="about-us.html">about us</a></li>
-                <li><a href="shop-grid-view-5-col.html">shop</a></li>
+                <li><a href="shop.html">shop</a></li>
                 <li><a href="#">pages</a>
                     <ul class="dropdown">
                         <li><a href="about-us.html">about us</a></li>
