--- a/customer-dashboard.html
+++ b/customer-dashboard.html
@@ -38,40 +38,53 @@
 <![endif]-->
 <!-- header start -->
 <div class="wrapper">
-    <header class="pl-155 pr-155 intelligent-header">
-        <div class="header-area header-area-2">
-            <div class="container-fluid p-0">
-                <div class="row no-gutters">
+    <header>
+        <div class="header-area header-area-padding">
+            <div class="container">
+                <div class="row">
                     <div class="col-lg-3 col-md-6 col-6">
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/logo/logo.png" alt=""/></a>
+                            <a href="index.html">
+                                <h1>template 2</h1>
+                                <!--<img src="assets/img/logo/logo.png" alt="" />-->
+                            </a>
                         </div>
                     </div>
                     <div class="col-lg-6 menu-none-block menu-center">
                         <div class="main-menu">
                             <nav>
                                 <ul>
-                                    <li><a href="#">home</a></li>
-                                    <li><a href="about-us.html">about us</a></li>
-                                    <li><a href="shop-grid-view-5-col.html">shop</a></li>
-                                    <li><a href="#">pages</a>
+                                    <li><a href="index.html">Home</a>
+                                    </li>
+                                    <li><a href="about-us.html">About Us</a>
+                                    </li>
+                                    <li><a href="shop.html">Shop</a>
+                                    </li>
+                                    <li><a href="#">Pages</a>
                                         <ul class="dropdown">
-                                            <li><a href="about-us.html">about us</a></li>
-                                            <li><a href="cart.html">cart</a></li>
-                                            <li><a href="checkout.html">checkout</a></li>
-                                            <li><a href="wishlist.html">wishlist</a></li>
-                                            <li><a href="contact.html">contact</a></li>
-                                            <li><a href="login.html">login</a></li>
-                                            <li><a href="register.html">register</a></li>
+                                            <li>
+                                                <a href="about-us.html">About Us</a>
+                                            </li>
+                                            <li>
+                                                <a href="cart.html">Cart</a>
+                                            </li>
+                                            <li>
+                                                <a href="checkout.html">Checkout</a>
+                                            </li>
                                         </ul>
                                     </li>
-                                    <li><a href="#">blog</a>
+                                    <li><a href="blog.html">Blog</a>
                                         <ul class="dropdown">
-                                            <li><a href="blog.html">blog </a></li>
-                                            <li><a href="blog-details.html">blog details</a></li>
+                                            <li>
+                                                <a href="blog-details.html">Blog Details</a>
+                                            </li>
+                                            <li>
+                                                <a href="blog.html">Latest Blog</a>
+                                            </li>
                                         </ul>
                                     </li>
-                                    <li><a href="contact.html">contact</a></li>
+                                    <li><a href="contact.html">Contact</a>
+                                    </li>
                                 </ul>
                             </nav>
                         </div>
@@ -86,6 +99,8 @@
                             <div class="header-cart common-style">
                                 <button class="sidebar-trigger">
                                     <span class="ion-bag"></span>
+                                    <span class="item-count">3</span>
+                                    <!--<span class="badge bg-danger">৳</span>-->
                                 </button>
                             </div>
                             <div class="header-sidebar common-style">
@@ -95,69 +110,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mobile-menu-area d-md-block col-md-12 col-lg-12 col-12 d-lg-none d-xl-none">
-                        <div class="mobile-menu">
-                            <nav id="mobile-menu-active">
-                                <ul class="menu-overflow">
-                                    <li><a href="#">HOME</a>
-                                        <ul>
-                                            <li><a href="index.html">furniture</a></li>
-                                            <li><a href="index-electronics.html">electronics</a></li>
-                                            <li><a href="index-fashion.html">fashion</a></li>
-                                            <li><a href="index-jewellery.html">jewellery</a></li>
-                                            <li><a href="index-food-drink.html">food & drink</a></li>
-                                            <li><a href="index-toys.html">Toys & Games</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">pages</a>
-                                        <ul>
-                                            <li><a href="about-us.html">about us</a></li>
-                                            <li><a href="cart.html">cart</a></li>
-                                            <li><a href="checkout.html">checkout</a></li>
-                                            <li><a href="wishlist.html">wishlist</a></li>
-                                            <li><a href="contact.html">contact</a></li>
-                                            <li><a href="login.html">login</a></li>
-                                            <li><a href="register.html">register</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">shop</a>
-                                        <ul>
-                                            <li><a href="shop-grid-view-3-col.html">grid 3 column</a></li>
-                                            <li><a href="shop-grid-view-5-col.html">grid 5 column</a></li>
-                                            <li><a href="shop-grid-view-sidebar.html">grid with sidebar</a></li>
-                                            <li><a href="shop-list-view-1-col.html">list 1 column</a></li>
-                                            <li><a href="shop-list-view-2-col.html">list 2 column</a></li>
-                                            <li><a href="shop-list-view-sidebar.html">list with sidebar</a></li>
-                                            <li><a href="shop-list-view-1-col-container.html">list 1 column box</a></li>
-                                            <li><a href="product-details.html">tab style 1</a></li>
-                                            <li><a href="product-details-2.html">tab style 2</a></li>
-                                            <li><a href="product-details-3.html">tab style 3</a></li>
-                                            <li><a href="product-details-6.html">sticky style</a></li>
-                                            <li><a href="product-details-7.html">sticky style 2</a></li>
-                                            <li><a href="product-details-8.html">gallery style</a></li>
-                                            <li><a href="product-details-9.html">gallery style 2</a></li>
-                                            <li><a href="product-details-4.html">fixed image style</a></li>
-                                            <li><a href="product-details-5.html">fixed image style 2</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">BLOG</a>
-                                        <ul>
-                                            <li><a href="blog.html">blog </a></li>
-                                            <li><a href="blog-2-col.html">blog 2 column</a></li>
-                                            <li><a href="blog-left-sidebar.html">blog left sidebar</a></li>
-                                            <li><a href="blog-details.html">blog details</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="contact.html"> Contact </a></li>
-                                </ul>
-                            </nav>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
     </header>
-    <div class="header-space"></div>
     <!-- header end -->
     <!-- sidebar-cart start -->
     <div class="sidebar-cart onepage-sidebar-area">
@@ -212,8 +168,8 @@
                         </li>
                         <li class="single-product-cart">
                             <div class="cart-checkout-btn">
-                                <a class="btn-hover cart-btn-style" href="#">view cart</a>
-                                <a class="no-mrg btn-hover cart-btn-style" href="#">checkout</a>
+                                <a class="btn-hover cart-btn-style" href="cart.html">view cart</a>
+                                <a class="no-mrg btn-hover cart-btn-style" href="checkout.html">checkout</a>
                             </div>
                         </li>
                     </ul>
@@ -260,11 +216,21 @@
                     </div>
                     <div class="cur-lang-acc-dropdown">
                         <ul>
-                            <li><a href="#"><img src="assets/img/icon-img/english.png" alt=""> English </a></li>
-                            <li><a href="#"><img src="assets/img/icon-img/es.png" alt=""> spanish </a></li>
-                            <li><a href="#"><img src="assets/img/icon-img/fr.png" alt=""> french </a></li>
-                            <li><a href="#"><img src="assets/img/icon-img/ge.png" alt=""> german </a></li>
-                            <li><a href="#"><img src="assets/img/icon-img/es.png" alt=""> spanish </a></li>
+                            <li>
+                                <a href="#"><img src="assets/img/icon-img/english.png" alt=""> English </a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="assets/img/icon-img/es.png" alt=""> spanish </a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="assets/img/icon-img/fr.png" alt=""> french </a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="assets/img/icon-img/ge.png" alt=""> german </a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="assets/img/icon-img/es.png" alt=""> spanish </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -282,17 +248,6 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-    <div class="breadcrumb-area pt-205 pb-210" style="background-image: url(assets/img/bg/breadcrumb.jpg)">
-        <div class="container">
-            <div class="breadcrumb-content">
-                <h2>contact</h2>
-                <ul>
-                    <li><a href="#">home</a></li>
-                    <li> contact</li>
-                </ul>
             </div>
         </div>
     </div>
@@ -658,21 +613,23 @@
                     <div class="footer-widget">
                         <div class="footer-widget-m-content text-center">
                             <div class="footer-logo">
-                                <a href="#"><img src="assets/img/logo/logo.png" alt=""></a>
+                                <a href="index.html">
+                                    <h1>Logo</h1>
+                                    <!-- <img src="assets/img/logo/logo.png" alt="">-->
+                                </a>
                             </div>
                             <div class="footer-nav">
                                 <nav>
                                     <ul>
                                         <li><a href="index.html">home</a></li>
                                         <li><a href="about-us.html">about us</a></li>
-                                        <li><a href="shop-grid-view-sidebar.html">shop </a></li>
-                                        <li><a href="blog-left-sidebar.html"> blog </a></li>
-                                        <li><a href="#">pages </a></li>
+                                        <li><a href="shop.html">shop </a></li>
+                                        <li><a href="blog.html"> blog </a></li>
                                     </ul>
                                 </nav>
                             </div>
-                            <p>Copyright <i class="fa fa-copyright"></i> 2018 <a href="https://freethemescloud.com/"
-                                                                                 target="_blank">Free Themes Cloud.</a>
+                            <p>Copyright <i class="fa fa-copyright"></i> 2018 <a href="https://ginilab.com/"
+                                                                                 target="_blank">Ginilab LTD</a>
                                 All rights reserved. </p>
                         </div>
                     </div>
