--- a/wishlist.html
+++ b/wishlist.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Neha - Minimalist eCommerce HTML5 Template </title>
+        <title>Wishlist - eCommerce template-2</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Favicon -->
@@ -22,6 +22,14 @@
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/css/responsive.css">
         <script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
+
+        <!-- template 2 assets start -->
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900&display=swap"
+              rel="stylesheet">
+        <link rel="stylesheet" href="assets/template-2/css/font-awesome.min.css">
+        <link rel="stylesheet" href="assets/template-2/css/style.css">
+        <link rel="stylesheet" href="assets/template-2/css/responsive.css">
+        <!-- template 2 assets end -->
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -29,65 +37,53 @@
         <![endif]-->
         <!-- header start -->
         <div class="wrapper">
-            <!-- Newsletter Popup Start -->
-            <div class="popup_wrapper hidden-sm hidden-xs">
-                <div class="test">
-                    <span class="popup_off">Close</span>
-                    <div class="subscribe_area text-center">
-                        <h2>Newsletter</h2>
-                        <p>Subscribe to the Neha mailing list to receive updates on new arrivals, special offers and other discount information.</p>
-                        <div id="mc_embed_signup" class="subscribe-bottom">
-                            <form action="http://devitems.us11.list-manage.com/subscribe/post?u=6bbb9b6f5827bd842d9640c82&amp;id=05d85f18ef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                                <div id="mc_embed_signup_scroll" class="mc-form">
-                                    <input type="email" value="" name="EMAIL" class="email" placeholder="Enter your email address" required>
-                                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                    <div class="mc-news" aria-hidden="true"><input type="text" name="b_6bbb9b6f5827bd842d9640c82_05d85f18ef" tabindex="-1" value=""></div>
-                                    <div class="clear-2"><input type="submit" value="subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="subscribe-bottom mt-15">
-                            <input type="checkbox" id="newsletter-permission">
-                            <label for="newsletter-permission">Don't show this popup again</label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Newsletter Popup End -->
-            <header class="pl-155 pr-155 intelligent-header">
-                <div class="header-area header-area-2">
-                    <div class="container-fluid p-0">
-                        <div class="row no-gutters">
+            <header>
+                <div class="header-area header-area-padding">
+                    <div class="container">
+                        <div class="row">
                             <div class="col-lg-3 col-md-6 col-6">
                                 <div class="logo">
-                                    <a href="index.html"><img src="assets/img/logo/logo.png" alt="" /></a>
+                                    <a href="index.html">
+                                        <h1>template 2</h1>
+                                        <!--<img src="assets/img/logo/logo.png" alt="" />-->
+                                    </a>
                                 </div>
                             </div>
                             <div class="col-lg-6 menu-none-block menu-center">
                                 <div class="main-menu">
                                     <nav>
                                         <ul>
-                                            <li><a href="#">home</a></li>
-                                            <li><a href="about-us.html">about us</a></li>
-                                            <li><a href="shop-grid-view-5-col.html">shop</a></li>
-                                            <li><a href="#">pages</a>
+                                            <li><a href="index.html">Home</a>
+                                            </li>
+                                            <li><a href="aboutus.com">About Us</a>
+                                            </li>
+                                            <li><a href="shop.html">Shop</a>
+                                            </li>
+                                            <li><a href="pages.com">Pages</a>
                                                 <ul class="dropdown">
-                                                    <li><a href="about-us.html">about us</a></li>
-                                                    <li><a href="cart.html">cart</a></li>
-                                                    <li><a href="checkout.html">checkout</a></li>
-                                                    <li><a href="wishlist.html">wishlist</a></li>
-                                                    <li><a href="contact.html">contact</a></li>
-                                                    <li><a href="login.html">login</a></li>
-                                                    <li><a href="register.html">register</a></li>
+                                                    <li>
+                                                        <a href="aboutus.com">About Us</a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="cart.com">Cart</a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="checkout.com">Checkout</a>
+                                                    </li>
                                                 </ul>
                                             </li>
-                                            <li><a href="#">blog</a>
+                                            <li><a href="blog.com">Blog</a>
                                                 <ul class="dropdown">
-                                                    <li><a href="blog.html">blog </a></li>
-                                                    <li><a href="blog-details.html">blog details</a></li>
+                                                    <li>
+                                                        <a href="blogdetails.com">Blog Details</a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="latestblog.com">Latest Blog</a>
+                                                    </li>
                                                 </ul>
                                             </li>
-                                            <li><a href="contact.html">contact</a></li>
+                                            <li><a href="contact.com">Contact</a>
+                                            </li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -102,6 +98,8 @@
                                     <div class="header-cart common-style">
                                         <button class="sidebar-trigger">
                                             <span class="ion-bag"></span>
+                                            <span class="item-count">3</span>
+                                            <!--<span class="badge bg-danger">৳</span>-->
                                         </button>
                                     </div>
                                     <div class="header-sidebar common-style">
@@ -111,69 +109,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="mobile-menu-area d-md-block col-md-12 col-lg-12 col-12 d-lg-none d-xl-none">
-                                <div class="mobile-menu">
-                                    <nav id="mobile-menu-active">
-                                        <ul class="menu-overflow">
-                                            <li><a href="#">HOME</a>
-                                                <ul>
-                                                    <li><a href="index.html">furniture</a></li>
-                                                    <li><a href="index-electronics.html">electronics</a></li>
-                                                    <li><a href="index-fashion.html">fashion</a></li>
-                                                    <li><a href="index-jewellery.html">jewellery</a></li>
-                                                    <li><a href="index-food-drink.html">food & drink</a></li>
-                                                    <li><a href="index-toys.html">Toys & Games</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="#">pages</a>
-                                                <ul>
-                                                    <li><a href="about-us.html">about us</a></li>
-                                                    <li><a href="cart.html">cart</a></li>
-                                                    <li><a href="checkout.html">checkout</a></li>
-                                                    <li><a href="wishlist.html">wishlist</a></li>
-                                                    <li><a href="contact.html">contact</a></li>
-                                                    <li><a href="login.html">login</a></li>
-                                                    <li><a href="register.html">register</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="#">shop</a>
-                                                <ul>
-                                                    <li><a href="shop-grid-view-3-col.html">grid 3 column</a></li>
-                                                    <li><a href="shop-grid-view-5-col.html">grid 5 column</a></li>
-                                                    <li><a href="shop-grid-view-sidebar.html">grid with sidebar</a></li>
-                                                    <li><a href="shop-list-view-1-col.html">list 1 column</a></li>
-                                                    <li><a href="shop-list-view-2-col.html">list 2 column</a></li>
-                                                    <li><a href="shop-list-view-sidebar.html">list with sidebar</a></li>
-                                                    <li><a href="shop-list-view-1-col-container.html">list 1 column box</a></li>
-                                                    <li><a href="product-details.html">tab style 1</a></li>
-                                                    <li><a href="product-details-2.html">tab style 2</a></li>
-                                                    <li><a href="product-details-3.html">tab style 3</a></li>
-                                                    <li><a href="product-details-6.html">sticky style</a></li>
-                                                    <li><a href="product-details-7.html">sticky style 2</a></li>
-                                                    <li><a href="product-details-8.html">gallery style</a></li>
-                                                    <li><a href="product-details-9.html">gallery style 2</a></li>
-                                                    <li><a href="product-details-4.html">fixed image style</a></li>
-                                                    <li><a href="product-details-5.html">fixed image style 2</a></li> 
-                                                </ul>
-                                            </li>
-                                            <li><a href="#">BLOG</a>
-                                                <ul>
-                                                    <li><a href="blog.html">blog </a></li>
-                                                    <li><a href="blog-2-col.html">blog 2 column</a></li>
-                                                    <li><a href="blog-left-sidebar.html">blog left sidebar</a></li>
-                                                    <li><a href="blog-details.html">blog details</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="contact.html"> Contact  </a></li>
-                                        </ul>
-                                    </nav>							
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
             </header>
-            <div class="header-space"></div>
             <!-- header end -->
             <!-- sidebar-cart start -->
             <div class="sidebar-cart onepage-sidebar-area">
@@ -301,19 +240,8 @@
                     </div>
                 </div>
             </div>
-            <div class="breadcrumb-area pt-205 pb-210" style="background-image: url(assets/img/bg/breadcrumb.jpg)">
-                <div class="container">
-                    <div class="breadcrumb-content">
-                        <h2>wishlist</h2>
-                        <ul>
-                            <li><a href="#">home</a></li>
-                            <li> wishlist </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
             <!-- shopping-cart-area start -->
-            <div class="cart-main-area pt-95 pb-100">
+            <div class="cart-main-area pt-50">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
