change the email address

--- a/product-details.html
+++ b/product-details.html
@@ -1145,7 +1145,7 @@
                         <div class="footer-widget-r-content">
                             <ul>
                                 <li><span>Phone :</span> +00 123 54 0056</li>
-                                <li><span>Email : </span> <a href="#">neha@gmail.com</a></li>
+                                <li><span>Email : </span> <a href="#">example@gmail.com</a></li>
                                 <li><span>Address :</span> Dhaka Bangladesh</li>
                             </ul>
                         </div>
