works(active menu style, menu sticky, remove left menu bar, change blog button style, design breadcrumb, about page style, contact map style)

--- a/about-us.html
+++ b/about-us.html
@@ -56,7 +56,7 @@
                                         <ul>
                                             <li><a href="index.html">Home</a>
                                             </li>
-                                            <li><a href="about-us.html">About Us</a>
+                                            <li class="active"><a href="about-us.html">About Us</a>
                                             </li>
                                             <li><a href="shop.html">Shop</a>
                                             </li>
@@ -252,6 +252,23 @@
                 </div>
             </div>
 
+            <!--breadcrumb area start-->
+            <div class="breadcrumb-area" style="background-image: url('assets/template-2/images/breadcrumb-bg.jpg');">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="breadcrumbs">
+                                <ul>
+                                    <li><a href="index.html">home</a></li>
+                                    <li>/</li>
+                                    <li>about us</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--breadcrumb area end-->
 
             <div class="about-story pt-50">
                 <div class="container">
@@ -277,7 +294,7 @@
                     </div>
                 </div>
             </div>
-            <div class="about-services pb-70">
+            <div class="about-services ptb-70">
                 <div class="container">
                     <div class="section-title-others text-center mb-55">
                         <h2>Our Services</h2>
@@ -419,5 +436,9 @@
             headroom.init(); 
         </script>
         <script src="assets/js/main.js"></script>
+
+
+        <!-- template-2 js -->
+        <script src="assets/template-2/js/activation.js"></script>
     </body>
 </html>
