--- a/wishlist.html
+++ b/wishlist.html
@@ -240,6 +240,25 @@
                     </div>
                 </div>
             </div>
+
+            <!--breadcrumb area start-->
+            <div class="breadcrumb-area" style="background-image: url('assets/template-2/images/breadcrumb-bg.jpg');">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="breadcrumbs">
+                                <ul>
+                                    <li><a href="index.html">home</a></li>
+                                    <li>/</li>
+                                    <li>wishlist</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--breadcrumb area end-->
+
             <!-- shopping-cart-area start -->
             <div class="cart-main-area pt-50">
                 <div class="container">
@@ -306,6 +325,7 @@
                 </div>
             </div>
             <!-- shopping-cart-area end -->
+
             <footer class="footer-area gray-bg pt-100 pb-95">
                 <div class="container">
                     <div class="row">
@@ -358,11 +378,7 @@
                 </div>
             </footer>
         </div>
-		
-		
-		
-		
-		
+
 		<!-- all js here -->
         <script src="assets/js/vendor/jquery-1.12.0.min.js"></script>
         <script src="assets/js/popper.js"></script>
@@ -385,5 +401,9 @@
             headroom.init(); 
         </script>
         <script src="assets/js/main.js"></script>
+
+
+        <!-- template-2 js -->
+        <script src="assets/template-2/js/activation.js"></script>
     </body>
 </html>
