--- a/blog.html
+++ b/blog.html
@@ -72,7 +72,7 @@
                                                     </li>
                                                 </ul>
                                             </li>
-                                            <li><a href="blog.html">Blog</a>
+                                            <li class="active"><a href="blog.html">Blog</a>
                                                 <ul class="dropdown">
                                                     <li>
                                                         <a href="blog-details.html">Blog Details</a>
@@ -251,6 +251,23 @@
                 </div>
             </div>
 
+            <!--breadcrumb area start-->
+            <div class="breadcrumb-area" style="background-image: url('assets/template-2/images/breadcrumb-bg.jpg');">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="breadcrumbs">
+                                <ul>
+                                    <li><a href="index.html">home</a></li>
+                                    <li>/</li>
+                                    <li>blog</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--breadcrumb area end-->
 
             <!-- blog-area start -->
             <div class="blog-area pt-50">
@@ -283,7 +300,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="more-link">
+                                <div class="theme-btn float-right">
                                     <a href="blog-details.html">read more</a>
                                 </div>
                             </div>
@@ -315,7 +332,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="more-link">
+                                <div class="theme-btn float-right">
                                     <a href="blog-details.html">read more</a>
                                 </div>
                             </div>
@@ -347,7 +364,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="more-link">
+                                <div class="theme-btn float-right">
                                     <a href="blog-details.html">read more</a>
                                 </div>
                             </div>
@@ -379,7 +396,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="more-link">
+                                <div class="theme-btn float-right">
                                     <a href="blog-details.html">read more</a>
                                 </div>
                             </div>
@@ -411,7 +428,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="more-link">
+                                <div class="theme-btn float-right">
                                     <a href="blog-details.html">read more</a>
                                 </div>
                             </div>
@@ -443,7 +460,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="more-link">
+                                <div class="theme-btn float-right">
                                     <a href="blog-details.html">read more</a>
                                 </div>
                             </div>
@@ -522,15 +539,7 @@
                 </div>
             </footer>
         </div>
-		
-		
-		
-		
-		
-		
-		
-		
-		
+
 		<!-- all js here -->
         <script src="assets/js/vendor/jquery-1.12.0.min.js"></script>
         <script src="assets/js/popper.js"></script>
@@ -553,5 +562,9 @@
             headroom.init(); 
         </script>
         <script src="assets/js/main.js"></script>
+
+
+        <!-- template-2 js -->
+        <script src="assets/template-2/js/activation.js"></script>
     </body>
 </html>
