--- a/cart.html
+++ b/cart.html
@@ -252,6 +252,23 @@
                 </div>
             </div>
 
+            <!--breadcrumb area start-->
+            <div class="breadcrumb-area" style="background-image: url('assets/template-2/images/breadcrumb-bg.jpg');">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="breadcrumbs">
+                                <ul>
+                                    <li><a href="index.html">home</a></li>
+                                    <li>/</li>
+                                    <li>cart</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--breadcrumb area end-->
 
             <!-- shopping-cart-area start -->
             <div class="cart-main-area pt-50">
@@ -401,15 +418,7 @@
                 </div>
             </footer>
         </div>
-		
-		
-		
-		
-		
-		
-		
-		
-		
+
 		<!-- all js here -->
         <script src="assets/js/vendor/jquery-1.12.0.min.js"></script>
         <script src="assets/js/popper.js"></script>
@@ -432,5 +441,9 @@
             headroom.init(); 
         </script>
         <script src="assets/js/main.js"></script>
+
+
+        <!-- template-2 js -->
+        <script src="assets/template-2/js/activation.js"></script>
     </body>
 </html>
