--- a/customer-dashboard.html
+++ b/customer-dashboard.html
@@ -252,6 +252,23 @@
         </div>
     </div>
 
+    <!--breadcrumb area start-->
+    <div class="breadcrumb-area" style="background-image: url('assets/template-2/images/breadcrumb-bg.jpg');">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="breadcrumbs">
+                        <ul>
+                            <li><a href="index.html">home</a></li>
+                            <li>/</li>
+                            <li>profile</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--breadcrumb area end-->
 
     <!-- customer dashboard area start -->
     <section class="customer-dashboard-section section-padding">
@@ -592,7 +609,6 @@
     </section>
     <!-- user dashboard area end -->
 
-
     <footer class="footer-area gray-bg pt-100 pb-95">
         <div class="container">
             <div class="row">
@@ -662,5 +678,9 @@
 <script src="assets/js/owl.carousel.min.js"></script>
 <script src="assets/js/plugins.js"></script>
 <script src="assets/js/main.js"></script>
+
+
+<!-- template-2 js -->
+<script src="assets/template-2/js/activation.js"></script>
 </body>
 </html>
