--- a/product-details.html
+++ b/product-details.html
@@ -256,6 +256,23 @@
         </div>
     </div>
 
+    <!--breadcrumb area start-->
+    <div class="breadcrumb-area" style="background-image: url('assets/template-2/images/breadcrumb-bg.jpg');">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="breadcrumbs">
+                        <ul>
+                            <li><a href="index.html">home</a></li>
+                            <li>/</li>
+                            <li>product details</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--breadcrumb area end-->
 
     <!--product details area start-->
     <section class="product-details-area section-padding">
@@ -1097,8 +1114,6 @@
     </section>
     <!-- featured product area end -->
 
-
-
     <footer class="footer-area gray-bg pt-100 pb-95">
         <div class="container">
             <div class="row">
@@ -1154,42 +1169,6 @@
             </div>
         </div>
     </footer>
-    <!-- main navigation -->
-    <div class="clickable-mainmenu-btn">
-        <a class="clickable-mainmenu-active" href="#"><i class="ion-navicon"></i></a>
-    </div>
-    <div class="clickable-mainmenu text-center">
-        <div class="clickable-mainmenu-icon">
-            <button class="clickable-mainmenu-close">
-                <span class="ion-android-close"></span>
-            </button>
-        </div>
-        <div id="menu" class="text-left">
-            <ul>
-                <li><a href="index.html">home</a></li>
-                <li><a href="about-us.html">about us</a></li>
-                <li><a href="shop.html">shop</a></li>
-                <li><a href="#">pages</a>
-                    <ul class="dropdown">
-                        <li><a href="about-us.html">about us</a></li>
-                        <li><a href="cart.html">cart</a></li>
-                        <li><a href="checkout.html">checkout</a></li>
-                        <li><a href="wishlist.html">wishlist</a></li>
-                        <li><a href="contact.html">contact</a></li>
-                        <li><a href="login.html">login</a></li>
-                        <li><a href="register.html">register</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">blog</a>
-                    <ul class="dropdown">
-                        <li><a href="blog.html">blog </a></li>
-                        <li><a href="blog-details.html">blog details</a></li>
-                    </ul>
-                </li>
-                <li><a href="contact.html">contact</a></li>
-            </ul>
-        </div>
-    </div>
 </div>
 
 
@@ -1207,14 +1186,14 @@
 <script src="assets/js/owl.carousel.min.js"></script>
 <script src="assets/js/plugins.js"></script>
 
-<!--<script type="text/javascript">
+<script type="text/javascript">
     // grab an element
     var myElement = document.querySelector(".intelligent-header");
     // construct an instance of Headroom, passing the element
     var headroom  = new Headroom(myElement);
     // initialise
     headroom.init();
-</script>-->
+</script>
 <script>
     $(function () {
         $('.popup-modal').magnificPopup({
