--- a/shop.html
+++ b/shop.html
@@ -61,7 +61,7 @@
                                     </li>
                                     <li><a href="about-us.html">About Us</a>
                                     </li>
-                                    <li><a href="shop.html">Shop</a>
+                                    <li class="active"><a href="shop.html">Shop</a>
                                     </li>
                                     <li><a href="#">Pages</a>
                                         <ul class="dropdown">
@@ -255,6 +255,25 @@
         </div>
     </div>
 
+    <!--breadcrumb area start-->
+    <div class="breadcrumb-area" style="background-image: url('assets/template-2/images/breadcrumb-bg.jpg');">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="breadcrumbs">
+                        <ul>
+                            <li><a href="index.html">home</a></li>
+                            <li>/</li>
+                            <li>shop</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--breadcrumb area end-->
+    
+    
     <!--shop content wrapper start-->
     <div class="container">
         <div class="section-padding">
@@ -2323,7 +2342,6 @@
     </div>
     <!--shop content wrapper end-->
 
-
     <footer class="footer-area gray-bg pt-100 pb-95">
         <div class="container">
             <div class="row">
@@ -2379,42 +2397,6 @@
             </div>
         </div>
     </footer>
-    <!-- main navigation -->
-    <div class="clickable-mainmenu-btn">
-        <a class="clickable-mainmenu-active" href="#"><i class="ion-navicon"></i></a>
-    </div>
-    <div class="clickable-mainmenu text-center">
-        <div class="clickable-mainmenu-icon">
-            <button class="clickable-mainmenu-close">
-                <span class="ion-android-close"></span>
-            </button>
-        </div>
-        <div id="menu" class="text-left">
-            <ul>
-                <li><a href="index.html">home</a></li>
-                <li><a href="about-us.html">about us</a></li>
-                <li><a href="shop.html">shop</a></li>
-                <li><a href="#">pages</a>
-                    <ul class="dropdown">
-                        <li><a href="about-us.html">about us</a></li>
-                        <li><a href="cart.html">cart</a></li>
-                        <li><a href="checkout.html">checkout</a></li>
-                        <li><a href="wishlist.html">wishlist</a></li>
-                        <li><a href="contact.html">contact</a></li>
-                        <li><a href="login.html">login</a></li>
-                        <li><a href="register.html">register</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">blog</a>
-                    <ul class="dropdown">
-                        <li><a href="blog.html">blog </a></li>
-                        <li><a href="blog-details.html">blog details</a></li>
-                    </ul>
-                </li>
-                <li><a href="contact.html">contact</a></li>
-            </ul>
-        </div>
-    </div>
 </div>
 
 
@@ -2431,14 +2413,14 @@
 <script src="assets/js/ajax-mail.js"></script>
 <script src="assets/js/owl.carousel.min.js"></script>
 <script src="assets/js/plugins.js"></script>
-<!--<script type="text/javascript">
+<script type="text/javascript">
     // grab an element
     var myElement = document.querySelector(".intelligent-header");
     // construct an instance of Headroom, passing the element
     var headroom = new Headroom(myElement);
     // initialise
     headroom.init();
-</script>-->
+</script>
 <script>
     $(function () {
         $('.popup-modal').magnificPopup({
@@ -2455,5 +2437,9 @@
     });
 </script>
 <script src="assets/js/main.js"></script>
+
+
+<!-- template-2 js -->
+<script src="assets/template-2/js/activation.js"></script>
 </body>
 </html>
