change breadcrumb style

--- a/product-details.html
+++ b/product-details.html
@@ -257,11 +257,13 @@
     </div>
 
     <!--breadcrumb area start-->
-    <div class="breadcrumb-area" style="background-image: url('assets/template-2/images/breadcrumb-bg.jpg');">
+    <div class="breadcrumb-area" style="background-image: url('assets/template-2/images/breadcrumb-bg-1.jpg');">
+        <div class="overlay"></div>
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="breadcrumbs">
+                    <div class="breadcrumbs text-center">
+                        <h1>product details page</h1>
                         <ul>
                             <li><a href="index.html">home</a></li>
                             <li>/</li>
