fixed main navigation issue and slider issue

--- a/shop.html
+++ b/shop.html
@@ -41,6 +41,45 @@
 <![endif]-->
 <!-- header start -->
 <div class="wrapper">
+    <!--mobile menu bar start-->
+    <div class="mobile_view">
+        <div class="mobile-menu-area">
+            <ul class="mobile-menu">
+                <li><i class="fa fa-times" id="close"></i></li>
+                <li><a class="nav-link" href="index.html">Home</a></li>
+                <li><a class="nav-link" href="about-us.html">About Us</a></li>
+                <li><a class="nav-link" href="shop.html">Shop</a></li>
+                <li><a class="nav-link" href="cart.html">Cart</a></li>
+                <li><a class="nav-link" href="checkout.html">Checkout</a></li>
+                <li><a class="nav-link" href="blog.html">Blog</a></li>
+                <li><a class="nav-link" href="blog-details.html">Blog Details</a></li>
+                <li><a class="nav-link" href="contact.html">Contact Us</a></li>
+            </ul>
+        </div>
+        <div class="sticky-area-mobile-view">
+            <div class="mobile-home-btn text-center mobile-sticky-bar-common-style">
+                <i class="fa fa-home"></i>
+                <p>home</p>
+            </div>
+            <div class="mobile-user-btn text-center mobile-sticky-bar-common-style">
+                <i class="fa fa-user"></i>
+                <p>user</p>
+            </div>
+            <div class="mobile-call-btn text-center mobile-sticky-bar-common-style">
+                <i class="fa fa-phone"></i>
+                <p>call</p>
+            </div>
+            <div class="mobile-cart-btn text-center mobile-sticky-bar-common-style">
+                <i class="fa fa-shopping-cart"></i>
+                <p>order</p>
+            </div>
+            <div class="mobile-menu-btn text-center mobile-sticky-bar-common-style">
+                <i class="fa fa-bars"></i>
+                <p>more</p>
+            </div>
+        </div>
+    </div>
+    <!--mobile menu bar end-->
     <header>
         <div class="header-area header-area-padding">
             <div class="container">
@@ -2344,6 +2383,7 @@
     </div>
     <!--shop content wrapper end-->
 
+    <div class="mobile-menu-bar-margin"></div>
     <footer class="footer-area gray-bg pt-100 pb-95">
         <div class="container">
             <div class="row">
